Fixed glitched arrow character on iOS

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,10 +131,10 @@ button {
   display: block;
   color: white;
   text-align: center;
-  text-indent: .9em;
+  text-indent: .425em;
   width: 100%;
   height: 40px;
-  padding-right: .9em;
+  padding-right: .425em;
   background-color: transparent;
   border: 1px solid transparent;
 }
@@ -148,12 +148,14 @@ button.primary {
 }
 
 button.primary::before {
-  content: '\25b6';
+  content: '\f0da';
   display: inline-block;
   vertical-align: middle;
+  font-family: 'FontAwesome', monospace;
+  font-size: 1.6em;
   position: relative;
-  top: -.225em;
-  left: -.45em;
+  top: -.125em;
+  left: -.3em;
 }
 
 /*
